syntax = "proto3";

package sysuser.v1;

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";

option go_package = "hope/api/admin/sysuser/v1;v1";

// The Auth service definition.
service Auth {
  // 用户登陆
  rpc Login (LoginReq) returns (LoginReply)  {
    option (google.api.http) = {
      post: "/v1/sys/auth/login"
      body: "*"
    };
  }

  // 退出登陆
  rpc LogOut (LogOutReq) returns (LogOutReply)  {
    option (google.api.http) = {
      post: "/v1/sys/auth/logout"
      body: "*"
    };
  }

  // 获取用户信息
  rpc GetUserInfo (GetUserInfoReq) returns (LoginReply)  {
    option (google.api.http) = {
      get: "/v1/sys/auth/getUserInfo"
    };
  }

  // 获取用户权限编码
  rpc GetPermCode (GetPermReq) returns (GetPermReply)  {
    option (google.api.http) = {
      get: "/v1/sys/auth/getPermCode"
    };
  }

  // 获取用户菜单列表
  rpc GetMenuList (GetMenuReq) returns (GetMenuReply)  {
    option (google.api.http) = {
      get: "/v1/sys/auth/getMenuList"
    };
  }

}

//登陆请求
message LoginReq{
  //用户名
  string username = 1;
  //密码
  string password = 2;
}
//登陆返回
message LoginReply{

  message Role{
    //角色名
    string roleName = 1;
    //角色编码
    string value = 2;
  }
  message UserInfo{
    //用户ID
    int64 userId = 1;
    //用户名
    string username = 2;
    //真实姓名
    string realName = 3;
    //头像
    string avatar = 4;
    //描述
    string desc = 5;
    //token
    string token = 6;
    //首页路径
    string homePath = 7;
    //角色
    repeated Role roles = 8;
  }
  // 返回码
  int32 code = 1;
  // 消息
  string message = 2;
  // 结果数据
  UserInfo result = 3;
}
//退出登录请求
message GetUserInfoReq{

}
//退出登录请求
message LogOutReq{

}

//获取菜单请求
message GetMenuReq{

}

//获取菜单返回
message GetMenuReply{
  message Menu{
    message Meta{
      //菜单标题
      string title = 1;
      //图标
      string icon = 2;
      //不缓存
      bool ignoreKeepAlive = 3;
      //隐藏面包屑
      bool hideBreadcrumb = 4;
      //隐藏子菜单
      bool hideChildrenInMenu = 5;
      //排序
      int32 sort = 6;
      //影藏菜单
      bool hideMenu = 7;
      //外链地址
      string frameSrc = 8;
    }
    //菜单编号
    int64 id = 1;
    //父菜单Id
    int64 parentId = 2;
    //路径
    string path = 3;
    //菜单名
    string name = 4;
    //组件
    string component = 5;
    //跳转路径
    string redirect = 6;
    // 菜单元信息
    Meta meta = 7;
    //子菜单
    repeated Menu children = 8;
  }
  // 返回码
  int32 code = 1;
  // 消息
  string message = 2;
  //权限编码列表
  repeated Menu result = 3;
}

//获取权限请求
message GetPermReq{

}

//获取权限请求
message GetPermReply{
  // 返回码
  int32 code = 1;
  // 消息
  string message = 2;
  //权限编码列表
  repeated string result = 3;
}
//退出登录返回
message LogOutReply{
  // 返回码
  int32 code = 1;
  // 消息
  string message = 2;
  // 结果数据
  bool result = 3;
}